rename namespace and add upload module

--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,50 @@
 {
-  "name": "yii2gurtam/froala",
-  "description": "Yii2 froala widget",
-  "version": "0.1.1",
-  "keywords": ["yii2", "froala", "yii2-widget"],
+  "name": "gurtam/yii2-froala",
+  "description": "This is Yii2 froala widget with upload files actions",
+  "keywords": [
+    "yii2",
+    "extension",
+    "behavior",
+    "widget",
+    "upload",
+    "froala"
+  ],
+  "homepage": "https://github.com/wdc-admin/yii2-froala-file-upload-module",
   "type": "yii2-extension",
   "license": "BSD-3-Clause",
   "authors": [
     {
+      "name": "Alexey Loban",
+      "email": "lav451@gmail.com"
+    },
+    {
       "name": "Yuri Laptev",
       "email": "yula@gurtam.com"
+    },
+    {
+      "name": "Malchenko Dmitriy",
+      "email": "dmim@gurtam.com"
+    }
+  ],
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/wdc-admin/yii2-froala-file-upload-module.git"
     }
   ],
   "require": {
     "yiisoft/yii2": "~2.0.0",
+    "bower-asset/blueimp-file-upload": "9.*",
     "froala/yii2-froala-editor": "~2.6.0"
   },
   "autoload": {
-    "psr-4": { "yii2gurtam\\froala\\": "src/" }
+    "psr-4": {
+      "gurtam\\yii2Froala\\": "src"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.1.1"
+    }
   }
 }
