--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1.1"
+      "dev-master": "0.1.2"
     }
   },
-  "minimum-stability":"0.1.2"
+  "minimum-stability":"stable"
 }
