--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   ],
   "require": {
     "yiisoft/yii2": "~2.0.0",
-    "froala/yii2-froala-editor": "~2.6.0"
+    "froala/yii2-froala-editor": "2.6.0"
   },
   "autoload": {
     "psr-4": {
@@ -37,7 +37,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1.3"
+      "dev-master": "0.1.4"
     }
   },
   "minimum-stability": "stable"
